ignore LaTeX temp files :fire:

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,31 @@ vignettes/*.pdf
 .Renviron
 *.log
 homework.pdf
+
+# Latex
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.bcf
+*.tex
+*.run.xml
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
